bk_ida/gccida/g3/output_dependence
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_dependence/src/alias.c:2729:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64 *)mem[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_dependence/src/alias.c:2732:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64 *)x[1]; 
                 ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_dependence/src/alias.c:2758:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_dependence/src/alias.c:2759:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/output_dependence/src/obj/alias.o] Error 1
